--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -22,9 +22,9 @@ projects:
 
 social:
 # - {icon: 'twitter',   link: 'https://twitter.com/paululele'}
-- {icon: 'instagram', link: 'https://instagram.com/paululele'}
-- {icon: 'github',    link: 'https://github.com/lenpaul'}
-- {icon: 'linkedin',  link: 'https://linkedin.com/in/lenpaul'}
+- {icon: 'instagram', link: 'https://instagram.com/rileygunny'}
+- {icon: 'github',    link: 'https://github.com/Riley903'}
+- {icon: 'linkedin',  link: 'https://linkedin.com/in/riley-gunn-b416668b'}
 # - {icon: 'envelope',  link: 'mailto:mailto:l.nguyen.paul@gmail.com'}
 
 # social network icons available: 'twitter' / 'facebook' / 'github' / 'pinterest' 'google-plus' / 'linkedin' / 'youtube' / 'instagram' / 'dribbble' / 'behance' / 'soundcloud' / 'vine'
