--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -11,7 +11,7 @@ menu:
 # Projects Section
 
 projects:
-- {name: 'Battery Wall',   url: 'proj-1'}
+- {name: 'Emergency Power System',   url: 'proj-1'}
 - {name: 'Project Two',   url: 'proj-2'}
 - {name: 'Project Three', url: 'proj-3'}
 - {name: 'Project Four',  url: 'proj-4'}
